syntax = "proto3";

option go_package = "github.com/mirshahriar/multiplexing-simple/grpc/proto";

package echo;

service EchoService {
  rpc EchoMessage (EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
